Git HEAD
========

* added "K-23" scale

* added true peak meter according to ITU-R BS.1770-3


v1.30 (2012-09-06)
==================

* ITU-R BS.1770-1 loudness weighting

* combined peak and average level meter

* code cleanup and lotf of small bug fixes

* updated framework to JUCE v1.53

* updated documentation

* validation: full re-calibration and updated documentation


v1.22 (2011-04-10)
==================

* Windows: run-time dynamic linking to FFTW, releases include FFTW DLL

* Windows: stand-alone application (ASIO, DirectX)

* manual with full documentation

* another complete re-validation of K-Meter

* validation is now possible directly from within K-Meter

* wave files and instructions for validation of peak meter, overflow
  counter, phase correlation meter and stereo meter; corresponding
  fixes

* experimental support for surround sound

* changed overflow detection

* notify host of plug-in latency

* silenced output for unsupported sample rates

* fixed a few memory leaks and some minor bugs

* streamlined code and started commenting the code

* beautified meters


v1.21 (2010-12-12)
==================

* wave files and instructions for validation of K-Meter

* complete re-validation of K-Meter and corresponding fixes

* moved from premake v4.2 to v4.3

* generation of Visual C++ project files using premake4



v1.20 (2010-09-14)
==================

* automation and re/storing of plug-in parameters

* corrected overflow counting

* optimised displayed region of expanded meters



v1.19 (2010-09-06)
==================

* validated output

* fixed output buffer wrap-around

* merged both hold buttons into one

* some optical changes



v1.18 (2010-08-01)
==================

* band limiter for calculation of average RMS levels: windowed-sinc,
  high-pass @21 kHz (FFT convolution)

* process input buffers of arbitrary length using audio ring buffers

* pre-delay samples

* several optimisations

* first few manual pages



v1.17 (2010-07-17)